remove print and unnecessary imports